Added 404 page and adjusted landscape styles for small screens

--- a/src/index.css
+++ b/src/index.css
@@ -372,7 +372,7 @@ a:hover {
 
 .btn-move-left:focus,
 .btn-move-right:focus {
-  outline: none;
+  outline-color: #fca311;
 }
 
 .btn-move-left:hover,
@@ -423,7 +423,7 @@ a:hover {
 
 .dark-mode-btn-move-left:focus,
 .btn-move-right:focus {
-  outline: none;
+  outline-color: #fca311;
 }
 
 .dark-mode-btn-move-left:hover,
@@ -693,7 +693,7 @@ a:hover {
   justify-content: space-evenly;
   align-items: center;
   width: 80vw;
-  height: 70vh;
+  margin-top: 3rem;
 }
 .contact-title {
   font-size: 7.8rem;
@@ -720,11 +720,6 @@ a:hover {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.wrapper-contact {
-  display: grid;
-  grid-template-columns: 1fr !important;
-}
-
 .contact {
   background: transparent;
   width: 25vw;
@@ -733,8 +728,9 @@ a:hover {
 .contact form {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 1px;
   background-color: transparent;
+  padding: 0;
+  margin: 0;
 }
 .contact form input,
 .contact form textarea {
@@ -801,11 +797,63 @@ a:hover {
 .side-draw-button {
   display: none;
 }
-/*
+
+.card1,
+.card2,
+.card3,
+.card4 {
+  position: absolute;
+  border-radius: 5px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  will-change: transform;
+}
+
+.card1 {
+  min-width: 60ch;
+  min-height: 60ch;
+  width: 45vw;
+  height: 45vw;
+  max-width: 100ch;
+  max-height: 100ch;
+  background-image: url(https://image.flaticon.com/icons/svg/119/119596.svg);
+}
+
+.card2 {
+  width: 25ch;
+  height: 25ch;
+  background-image: url(https://image.flaticon.com/icons/svg/789/789395.svg);
+}
+
+.card3 {
+  opacity: 0.9;
+  width: 25ch;
+  height: 25ch;
+  background-image: url(https://image.flaticon.com/icons/svg/414/414927.svg);
+}
+
+.card4 {
+  width: 25ch;
+  height: 25ch;
+  background-image: url(https://image.flaticon.com/icons/svg/789/789392.svg);
+}
+
+.container-404 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/******************************************
+
 =====================================
 ==>        Media Query 
 =====================================
-*/
+
+******************************************/
 
 /*
 =====================================
@@ -820,7 +868,7 @@ a:hover {
 =========================================
 */
   .navigation-bar {
-    top: -2%;
+    top: -4%;
     left: 70%;
   }
 
@@ -833,7 +881,7 @@ a:hover {
 
   #left-logo,
   #dark-mode-left-logo {
-    top: -3%;
+    top: -5%;
   }
   /*=======================================
 ==>  LightMode Right-Bottom-Buttons  
@@ -1183,7 +1231,7 @@ a:hover {
   }
 
   .toggle-button:focus {
-    outline: none;
+    outline-color: #fca311;
   }
 
   .toggle-button__line {
@@ -1502,7 +1550,7 @@ a:hover {
     top: 90.5%;
     flex-direction: row;
     justify-content: space-between;
-    width: 77%;
+    width: 75%;
   }
 
   #left-icons p,
